# learn-vulkan

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findstb_image.cmake
code/: main.cpp
code/opengl/layer/: CMakeLists.txt
code/opengl/layer/include/: Layer.hpp  LayerScene.hpp
code/opengl/shader/: CMakeLists.txt  Shader.cpp  ShaderProgram.cpp  ShaderUniform.cpp
code/opengl/shader/include/: Shader.h  ShaderProgram.h  ShaderUniform.h
code/opengl/test/: CMakeLists.txt
code/opengl/utils/: Bezier.cpp  CMakeLists.txt  Transform.cpp
code/opengl/utils/include/: Bezier.h  Interfaces.hpp  OpenGLTypes.h  RenderContext.hpp  Transform.h  VertexLayout.hpp
code/test/: CMakeLists.txt  Camera.cpp  TestRender.cpp
code/test/include/: Camera.h  EventTypes.hpp  ResourceTypes.hpp  TestRender.h
code/utils/container/: CMakeLists.txt
code/utils/container/include/: Node.hpp  RAIIWrapper.hpp  VectorStruct.hpp
code/utils/event_bus/: CMakeLists.txt
code/utils/event_bus/include/: EventBus.hpp
code/utils/logger/: CMakeLists.txt  GlobalLogger.hpp  GlobalLogger_default.hpp
code/utils/logger/include/: Logger.hpp
code/utils/model_loader/: CMakeLists.txt  ModelParser.cpp
code/utils/model_loader/include/: ModelParser.h
code/utils/resource/: CMakeLists.txt  ResourceUtils.hpp
code/utils/resource/include/: Resource.hpp
code/vulkan/context/: CMakeLists.txt  EvkContext.cpp  VkContext.cpp
code/vulkan/context/include/: EvkContext.h  VkContext.h  VulkanTypes.hpp  VulkanUtils.hpp
resource/model/: model-backup.mtl
resource/shader/: default.vert  fragment.glsl  gui_fragment.glsl  vertex.glsl
